Refactor entire redis implementation and slim down indexes
