# controllers/document.go
@@ -7,16 +7,18 @@ import (
 	"github.com/gomodule/redigo/redis"
 	"github.com/gorilla/mux"
 	"github.com/jgsheppa/search_engine/models"
+	"github.com/jgsheppa/search_engine/scraper"
 	"io"
 	"io/ioutil"
 	"net/http"
 )
 
-func NewArticle(pool redis.Pool, redisSearch redisearch.Client, autoCompleter redisearch.Autocompleter) *RedisDB {
+func NewDocuments(redisService models.Services) *RedisDB {
 	return &RedisDB{
-		Pool:          pool,
-		redisSearch:   redisSearch,
-		autoCompleter: autoCompleter,
+		Pool:          redisService.Pool,
+		redisSearch:   redisService.Redisearch,
+		autoCompleter: redisService.Autocomplete,
+		s:             redisService,
 	}
 }
 
@@ -26,6 +28,7 @@ type RedisDB struct {
 	redisSearch redisearch.Client
 	// Redis autocomplete
 	autoCompleter redisearch.Autocompleter
+	s             models.Services
 } // @name RedisDB
 
 type Field struct {
@@ -38,12 +41,12 @@ type Field struct {
 // PostDocuments godoc
 // @Summary Post documents to Redisearch
 // @Tags Document
-// @Param Body body models.Articles true "The body to create a Redis document for an article"
-// @Success 201 {object} models.Articles
+// @Param Body body models.Documents true "The body to create a Redis document for an article"
+// @Success 201 {object} models.Documents
 // @Failure 422 {object} ApiError
-// @Router /api/document/article [post]
+// @Router /api/document [post]
 func (rdb *RedisDB) PostDocuments(w http.ResponseWriter, r *http.Request) {
-	var articles models.Articles
+	var documents models.Documents
 	body, err := ioutil.ReadAll(io.LimitReader(r.Body, 1048576))
 	if err != nil {
 		json.NewEncoder(w).Encode(largePayloadError)
@@ -52,7 +55,7 @@ func (rdb *RedisDB) PostDocuments(w http.ResponseWriter, r *http.Request) {
 	if err := r.Body.Close(); err != nil {
 		json.NewEncoder(w).Encode(serverError)
 	}
-	if err := json.Unmarshal(body, &articles); err != nil {
+	if err := json.Unmarshal(body, &documents); err != nil {
 		w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 		w.WriteHeader(422) // unprocessable entity
 		if err := json.NewEncoder(w).Encode(validationError); err != nil {
@@ -60,14 +63,42 @@ func (rdb *RedisDB) PostDocuments(w http.ResponseWriter, r *http.Request) {
 		}
 	}
 
-	err = models.CreateDocument(rdb.redisSearch, rdb.autoCompleter, articles)
+	err = rdb.s.CreateDocument(documents)
 	if err != nil {
 		json.NewEncoder(w).Encode(validationError)
 	}
 
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusCreated)
-	if err := json.NewEncoder(w).Encode(articles); err != nil {
+	if err := json.NewEncoder(w).Encode(documents); err != nil {
+		json.NewEncoder(w).Encode(validationError)
+	}
+	fmt.Fprintln(w, "Document successfully uploaded")
+}
+
+// PostScrapedDocuments godoc
+// @Summary Post documents to Redisearch
+// @Tags Document
+// @Param url path string true "URL path of guidebook"
+// @Param htmlTag path string true "HTML tag to scrape"
+// @Param containerClass path string true "Class of container holding HTML tag"
+// @Success 201 {object} models.Documents
+// @Failure 422
+// @Router /api/document/{url}/{htmlTag}/{containerClass} [post]
+func (rdb *RedisDB) PostScrapedDocuments(w http.ResponseWriter, r *http.Request) {
+	url := mux.Vars(r)["url"]
+	htmlTag := mux.Vars(r)["htmlTag"]
+	containerClass := mux.Vars(r)["containerClass"]
+	documents := scraper.ScrapeWebPage(url, htmlTag, containerClass)
+
+	err := rdb.s.CreateDocument(documents)
+	if err != nil {
+		json.NewEncoder(w).Encode(validationError)
+	}
+
+	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
+	w.WriteHeader(http.StatusCreated)
+	if err := json.NewEncoder(w).Encode(documents); err != nil {
 		json.NewEncoder(w).Encode(validationError)
 	}
 	fmt.Fprintln(w, "Document successfully uploaded")
@@ -84,7 +115,7 @@ func (rdb *RedisDB) PostDocuments(w http.ResponseWriter, r *http.Request) {
 func (rdb *RedisDB) DeleteDocument(w http.ResponseWriter, r *http.Request) {
 	term := mux.Vars(r)["documentName"]
 
-	err := models.DeleteDocument(rdb.redisSearch, term)
+	err := rdb.s.DeleteDocument(term)
 	if err != nil {
 		json.NewEncoder(w).Encode(notFoundError)
 		return
