# main.go
@@ -5,7 +5,6 @@ import (
 	"github.com/gorilla/mux"
 	"github.com/jgsheppa/search_engine/controllers"
 	"github.com/jgsheppa/search_engine/models"
-	redis_conn "github.com/jgsheppa/search_engine/redis"
 	"github.com/jgsheppa/search_engine/swagger"
 	"github.com/spf13/viper"
 	"log"
@@ -15,7 +14,7 @@ import (
 	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-// @title BestPracticer Search Engine
+// @title Redisearch Search Engine
 // @version 1.0
 // @description This is a search engine built with Redisearch
 
@@ -29,22 +28,12 @@ import (
 func main() {
 	port, baseUrl, httpProtocol := SetupConfig()
 
-	var pool = redis_conn.NewPool()
-
-	client := pool.Get()
-	defer client.Close()
-
-	c, autocomplete, err := models.CreateIndex(pool, "articles")
+	services, err := models.NewServices()
 	if err != nil {
-		log.Println(err)
+		panic(err)
 	}
 
-	cGuide, autocompleteGuide, err := models.CreateIndex(pool, "guide")
-	if err != nil {
-		log.Println(err)
-	}
-
-	swagger.SwaggerInfo.Title = "BestPracticer Search Engine"
+	swagger.SwaggerInfo.Title = "Redisearch Search Engine"
 	swagger.SwaggerInfo.Description = "This is a search engine built with Redisearch"
 	swagger.SwaggerInfo.Version = "1.0"
 	swagger.SwaggerInfo.Host = baseUrl
@@ -52,22 +41,19 @@ func main() {
 	swagger.SwaggerInfo.Schemes = []string{httpProtocol}
 
 	r := mux.NewRouter()
-	searchController := controllers.NewArticle(*pool, *c, *autocomplete)
-	guideController := controllers.NewArticle(*pool, *cGuide, *autocompleteGuide)
+	searchController := controllers.NewDocuments(*services)
 
 	// Swagger routes
 	r.PathPrefix("/swagger/").Handler(httpSwagger.WrapHandler)
 	r.PathPrefix("/swagger/").Handler(http.StripPrefix("/swagger", http.FileServer(http.Dir("swagger"))))
 	r.HandleFunc("/", controllers.DisplayAPIRoutes).Methods("GET")
 	// Document routes
-	r.HandleFunc("/api/document/article", searchController.PostDocuments).Methods("POST")
-	r.HandleFunc("/api/document/guide/{url}/{htmlTag}/{containerClass}", guideController.PostGuideDocuments).Methods("POST")
+	r.HandleFunc("/api/document", searchController.PostDocuments).Methods("POST")
+	r.HandleFunc("/api/document/docs/{url}/{htmlTag}/{containerClass}", searchController.PostScrapedDocuments).Methods("POST")
 	r.HandleFunc("/api/document/delete/{documentName}", searchController.DeleteDocument).Methods("DELETE")
 	// Index routes
-	r.HandleFunc("/api/index/delete/articles", searchController.DropIndex).Methods("DELETE")
-	r.HandleFunc("/api/index/delete/guide", guideController.DropIndex).Methods("DELETE")
-	r.HandleFunc("/api/index/create/articles", searchController.CreateIndex).Methods("POST")
-	r.HandleFunc("/api/index/create/guide", guideController.CreateGuideIndex).Methods("POST")
+	r.HandleFunc("/api/index/delete", searchController.DropIndex).Methods("DELETE")
+	r.HandleFunc("/api/index/create", searchController.CreateIndex).Methods("POST")
 
 	// Search routes
 	r.HandleFunc("/api/search/{term}", searchController.Search).Methods("GET")
@@ -94,32 +80,6 @@ func main() {
 		Queries("ascending", "{ascending}").
 		Queries("limit", "{limit}").
 		Methods("GET")
-
-	// Search routes
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).Methods("GET", "OPTIONS")
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).
-		Queries("limit", "{limit}").
-		Methods("GET", "OPTIONS")
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).
-		Queries("ascending", "{ascending}").
-		Methods("GET", "OPTIONS")
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).
-		Queries("sort", "{sort}").
-		Methods("GET", "OPTIONS")
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).
-		Queries("sort", "{sort}").
-		Queries("ascending", "{ascending}").Methods("GET", "OPTIONS")
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).
-		Queries("sort", "{sort}").
-		Queries("limit", "{limit}").Methods("GET", "OPTIONS")
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).
-		Queries("limit", "{limit}").
-		Queries("ascending", "{ascending}").Methods("GET", "OPTIONS")
-	r.HandleFunc("/api/search/guide/{term}", guideController.SearchGuide).
-		Queries("sort", "{sort}").
-		Queries("ascending", "{ascending}").
-		Queries("limit", "{limit}").
-		Methods("GET", "OPTIONS")
 
 	// HandlerFunc converts notFound to the correct type
 	r.NotFoundHandler = http.HandlerFunc(controllers.NotFound)
