# models/schema.go
@@ -10,9 +10,7 @@ import (
 func CreateSchema() *redisearch.Schema {
 	sc := redisearch.NewSchema(redisearch.DefaultOptions).
 		AddField(redisearch.NewNumericField("date")).
-		AddField(redisearch.NewNumericField("id")).
-		AddField(redisearch.NewTextFieldOptions("author", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true})).
-		AddField(redisearch.NewTextFieldOptions("title", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true})).
+		AddField(redisearch.NewTextFieldOptions("text", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true})).
 		AddField(redisearch.NewTextFieldOptions("url", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true})).
 		AddField(redisearch.NewTextFieldOptions("topic", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true}))
 	return sc
@@ -26,23 +24,9 @@ func CreateIndex(pool *redis.Pool, indexName string) (*redisearch.Client, *redis
 
 	// Create a schema
 	sc := CreateSchema()
-	if indexName == "guide" {
-		sc = CreateGuideSchema()
-	}
 
 	// Create the index with the given schema
 	err := c.CreateIndex(sc)
 
 	return c, autocomplete, err
-}
-
-// CreateSchema is used to create the schema for your Redisearch documents,
-// which will allow you to add your data in the form of these documents
-func CreateGuideSchema() *redisearch.Schema {
-	sc := redisearch.NewSchema(redisearch.DefaultOptions).
-		AddField(redisearch.NewNumericField("date")).
-		AddField(redisearch.NewTextFieldOptions("text", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true})).
-		AddField(redisearch.NewTextFieldOptions("url", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true})).
-		AddField(redisearch.NewTextFieldOptions("topic", redisearch.TextFieldOptions{Weight: 5.0, Sortable: true}))
-	return sc
 }
